# soletta-demos

./: AUTHORS  CMakeLists.txt  README.md
factory-monitor/: CMakeLists.txt
factory-monitor/fbp/: main.fbp  monitor-dummy.fbp  monitor-quark-se-devboard.fbp  server-dummy.fbp  server-quark-se-devboard.fbp  sol-flow-intel-minnow-max-linux_gt_3_17.json  sol-flow-minnow-max-gt-3.17.json  sol-flow-quark-se-devboard.json  sol-flow.json
factory-monitor/node_types/: custom-node.c  custom-node.json  oic.r.monitor.json
foosball/: CMakeLists.txt
foosball/node_types/: oic.r.score.json
foosball/scoreboard/: conf-edison.json  main.fbp  sol-flow-intel-edison-rev-c.json  sol-flow.json
foosball/table/: README.md  goal-detector.fbp  goals-max.fbp  main.fbp  score-counter.fbp  sol-flow-intel-edison-rev-c.json  sol-flow.json
